--- a/audio/workman/Makefile
+++ b/audio/workman/Makefile
@@ -3,7 +3,8 @@
 # Date created:         25 Now 1995
 # Whom:                 Donald Burr <d_burr@ix.netcom.com>
 #
-# $Id: Makefile,v 1.1.1.1 1997/10/28 23:19:16 augustss Exp $
+# $NetBSD: Makefile,v 1.2 1998/01/19 01:17:30 hubertf Exp $
+# FreeBSD Id: Makefile,v 1.4 1997/11/28 19:55:18 jseger Exp
 #
 
 DISTNAME=       WorkMan-1.3
@@ -18,5 +19,6 @@ LIB_DEPENDS=	xview\\.3\\.:${PORTSDIR}/x11/xview-lib
 
 WRKSRC=		${WRKDIR}/workman
 USE_IMAKE=	yes
+MAN1=		workman.1
 
 .include <bsd.port.mk>
